# Object-Hunt

./: README.md
Disposal/: disposal.tex
Eagle/ams_2019/: KunzeEagle540LPKF.drl  KunzeEagle540LPKF_2Layer.CAM  ams.BOA  ams.BOT  ams.DRD  ams.SMT  ams.SST  ams.TOP  ams.b#1  ams.b#2  ams.b#3  ams.b#4  ams.b#5  ams.b#6  ams.b#7  ams.b#8  ams.b#9  ams.brd  ams.dri  ams.gpi  ams.s#1  ams.s#2  ams.s#3  ams.s#4  ams.s#5  ams.s#6  ams.s#7  ams.s#8  ams.s#9  ams.sch  eagle.epf
Eagle/ams_2019/CAMOutputs/GerberFiles/: gerber_job.gbrjob
Files_rpi/: dnsmasq.conf  hostapd.conf  object_hunt_base.service  object_hunt_camera.service  object_hunt_navigation.service
Final_presentation/: presentation_team00.aux  presentation_team00.nav  presentation_team00.out  presentation_team00.tex  presentation_team00.toc
FreeCAD/: camera_mount.FCStd  camera_mount.FCStd1  camera_mount.stl  tcst1103_socket.FCStd  tcst1103_socket.FCStd1  tcst1103_socket.stl  tcst1103_socket_0.15mm_PLA_MK3S_20m.gcode  tcst1103_socket_hl.FCStd  tcst1103_socket_hl.stl  tcst1103_socket_hr.FCStd  tcst1103_socket_hr.stl  tcst1103_socket_vl.FCStd  tcst1103_socket_vl.stl  tcst1103_socket_vr.FCStd  tcst1103_socket_vr.stl  us_mount.FCStd  us_mount.FCStd1  us_mount.stl
Kick-off_presentation/: .~lock.kick_off_group0.odp#  kick_off_group0.odp
Proposal/: proposal_group0.tex
Report/: .~lock.AMS Bericht.docx#  AMS Bericht.docx  conclusion.tex  hardware.tex  image_processing.tex  internal_software.tex  introduction.tex  mapping.tex  references.tex  report.aux  report.dvi  report.lof  report.lot  report.out  report.tex  report.toc
object_hunt_base/: CMakeLists.txt
object_hunt_base/build_wifi/: CMakeCache.txt  Makefile  cmake_install.cmake  object_hunt_base.cbp
object_hunt_base/include/: BNO_055.h  BNO_055Exception.h  GPIO.h  GPIOException.h  GearMotor.h  GearMotorException.h  HC_SR04.h  HC_SR04Exception.h  HardwareInterface.h  HardwareInterfaceException.h  I2C.h  I2CException.h  TCST_1103.h  TCST_1103Exception.h  TaskDistributor.h  TaskDistributorException.h  VMA_401.h  VMA_401Exception.h
object_hunt_base/shared/include/: ObjectHuntDefinitions.h
object_hunt_base/src/: BNO_055.cpp  GPIO.cpp  GearMotor.cpp  HC_SR04.cpp  HardwareInterface.cpp  I2C.cpp  ObjectHunterBase_main.cpp  TCST_1103.cpp  TaskDistributor.cpp  VMA_401.cpp
object_hunt_camera/: anleitung.txt  client.py  object_detection_multiprocessing.py  server.py  ultra_sonic.py
object_hunt_mapping/: AMS_final.pptx
object_hunt_navigation/: CMakeLists.txt
object_hunt_navigation/include/: ConnectionManager.h  ConnectionManagerException.h  Navigator.h  NavigatorException.h
object_hunt_navigation/src/: ConnectionManager.cpp  Navigator.cpp  ObjectHunterNavigation_main.cpp
scripts/: camera.bash  mapping.bash  object_hunt.bash
